# StickyNAV

./: .gitmodules  README.md
assets/: car_park.world  playground.world  single_obj_wall.world  single_obj_wall_cornered.world  single_obj_wall_dual.world  test_1.world  test_2.world  test_3.world  test_6.world  test_7.world
assets/L_wall/: model.config  model.sdf
assets/c_wall/: model.config
assets/plain_wall/: model.config  model.sdf
assets/wall/: model.sdf
assets/wall2x2/: model.config  model.sdf
docker/.devcontainer/: Dockerfile  Dockerfile-release  devcontainer.json  requirements.txt
simple_ridgeback_nbv/: CMakeLists.txt  laser_to_pointcloud.py  odom_transform.py  package.xml
simple_ridgeback_nbv/assets/: demo.world  multi_obj.world  single_obj.world  single_obj_dual.world  test_4.world  test_8.world  willow.world
stickynav-core/: CMakeLists.txt  package.xml
stickynav-core/include/: online_planner.h  planner_base.h
stickynav-core/include/data/: bounding_volume.h  trajectory_segment.h  visualization_markers.h
stickynav-core/include/map/: map.h
stickynav-core/include/module/: back_tracker.h  module.h  trajectory_evaluator.h  trajectory_generator.h
stickynav-core/src/: online_planner.cpp  rrt.cpp  rrt_star.cpp  trajectory_generator.cpp
stickynav-core/src/data/: trajectory_segment.cpp  visualization_markers.cpp
stickynav-ros/: CMakeLists.txt  package.xml
stickynav-ros/config/: bounds.yaml  stickynav.yaml
stickynav-ros/launch/: test.launch
stickynav-ros/src/: online_planner_ros.cpp
superglue-ros/: CMakeLists.txt  package.xml
(+62 files in other folders)
